# Petra

./: .gitignore  Cargo.toml  README.md
.cargo/: config
assets/shaders/: terrain.wgsl
src/: main.rs  petra.rs  regionem.rs
src/petra/: camera.rs  erode.rs  generation.rs  material.rs  mesh.rs  modify.rs  setup.rs  shader.rs  terrain.rs  tools.rs
src/petra/tools/: erode.rs  raise.rs
src/regionem/: mesh.rs  setup.rs
