[package]
name = "petra"
version = "0.1.0"
authors = ["BenCantCode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.6", features = ["dynamic"] }
bevy_asset = "^0.6"
noise = "0.7.0"
rand = "0.8.4"
image = "0.24.1"
bevy_mod_picking = "^0.5.4"
bevy_mod_raycast = "^0.3.9"
bevy_egui = "0.10.0"