[package]
name = "petra"
version = "0.1.0"
authors = ["BenCantCode"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "^0.7", features = ["dynamic"] }
noise = "0.7.0"
rand = "0.8.4"
image = "0.24.1"
bevy_egui = "0.13.0"
bevy_mod_picking = "0.6"

[patch.crates-io]
bevy_mod_raycast = { git = "https://github.com/obsgolem/bevy_mod_raycast", branch = "release" }
bevy_mod_picking = { git = "https://github.com/obsgolem/bevy_mod_picking", branch = "release" }